--- a/app/index.html
+++ b/app/index.html
@@ -23,7 +23,7 @@
   <!-- Cabeçalho -->
   <!-- Top-Bar -->
   <header>
-    <div class="top-bar py-lg-1 py-1">
+    <div class="top-bar py-1">
       <div class="container ">
         <p class="fw-bold">Qualidade internacional comprovada e preço direto da fábrica.</p>
       </div>
@@ -138,9 +138,9 @@
 
       <!-- suplementos-div -->
       <div class="suplementos-div container">
-        <div class="row gx-1 gy-1"> 
+        <div class="row gx-1 gy-1 justify-content-center text-center">
           <div class="col">
-            <div class="suplemento p-1"> 
+            <div class="suplemento p-1">
               <img src="/assets/resources/images/proteinas.png" alt="Proteínas" class="img-fluid">
               <p class="fw-bold m-0">Proteínas</p>
             </div>
@@ -184,7 +184,7 @@
         </div>
       </div>
       <!-- suplementos-div -->
-  
+
       <!-- Carousel Suplementos -->
       <div class="d-flex carousel-suplementos justify-content-center">
         <div id="carouselSuplementosAutoplaying" class="carousel slide" data-bs-ride="carousel">
@@ -249,14 +249,192 @@
     <!-- section prod -->
 
     <!-- section clientes -->
-    <section>
-      <div></div>
+    <section class="section-client">
+      <div class="d-flex justify-content-center">
+        <img src="/assets/resources/images/ra-opnioes.png.png" alt="img" class="img-fluid">
+      </div>
+      <div class="d-flex justify-content-center">
+        <div class="col-md-7">
+          <h3 class="text-white fw-bold text-center">Milhares de clientes já compraram suplementos
+            com a Growth, confira algumas opiniões.</h3>
+        </div>
+      </div>
+      <div class="container cards-clientes mt-5">
+        <div class="row justify-content-center">
+          <div class="col-sm-4 d-flex">
+            <div class="card flex-fill">
+              <div class="card-body d-flex flex-column">
+                <i class="bi bi-quote quote-double"></i>
+                <div class="text-center flex-grow-1 d-flex flex-column justify-content-between">
+                  <h5 class="card-title">Top de mais, sou cliente fiel da growth todo mês eu compro pelo menos 2 whey
+                    com vocês.…</h5>
+                  <div>
+                    <p class="card-text fw-bold">Rafael S.</p>
+                    <p class="card-text">13/03/2024</p>
+                    <div class="row stars">
+                      <div class="d-flex justify-content-center">
+                        <i class="bi bi-star-fill"></i>
+                        <i class="bi bi-star-fill"></i>
+                        <i class="bi bi-star-fill"></i>
+                        <i class="bi bi-star-fill"></i>
+                        <i class="bi bi-star-fill"></i>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+                <i class="align-items-end bi-quote quote-double invert-icon"></i>
+              </div>
+            </div>
+          </div>
+          <div class="col-sm-4 d-flex">
+            <div class="card flex-fill">
+              <div class="card-body d-flex flex-column">
+                <i class="bi bi-quote quote-double"></i>
+                <div class="text-center flex-grow-1 d-flex flex-column justify-content-between">
+                  <h5 class="">Preços ótimos e muita variedade</h5>
+                  <div>
+                    <p class="card-text fw-bold">Marisa M.</p>
+                    <p class="card-text">13/03/2024</p>
+                    <div class="row stars">
+                      <div class="d-flex justify-content-center">
+                        <i class="bi bi-star-fill"></i>
+                        <i class="bi bi-star-fill"></i>
+                        <i class="bi bi-star-fill"></i>
+                        <i class="bi bi-star-fill"></i>
+                        <i class="bi bi-star-fill"></i>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+                <i class="align-items-end bi-quote quote-double invert-icon"></i>
+              </div>
+            </div>
+          </div>
+          <div class="col-sm-4 d-flex">
+            <div class="card flex-fill">
+              <div class="card-body d-flex flex-column">
+                <i class="bi bi-quote quote-double"></i>
+                <div class="text-center flex-grow-1 d-flex flex-column justify-content-between">
+                  <h5 class="card-title">Eu já recomendo a Growth em todos os meus grupos de Bariátricos que participo,
+                    e também a todos meus…</h5>
+                  <div>
+                    <p class="card-text fw-bold">Débora P.</p>
+                    <p class="card-text">13/03/2024</p>
+                    <div class="row stars">
+                      <div class="d-flex justify-content-center">
+                        <i class="bi bi-star-fill"></i>
+                        <i class="bi bi-star-fill"></i>
+                        <i class="bi bi-star-fill"></i>
+                        <i class="bi bi-star-fill"></i>
+                        <i class="bi bi-star-fill"></i>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+                <i class="align-items-end bi-quote quote-double invert-icon"></i>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <div class="container mt-5">
+        <!-- Carousel Suplementos -->
+        <div class="d-flex carousel-suplementos justify-content-center">
+          <div id="carouselSuplementosAutoplaying" class="carousel slide" data-bs-ride="carousel">
+            <div class="carousel-inner">
+              <div class="carousel-item active">
+                <div class="card flex-fill">
+                  <div class="card-body d-flex flex-column">
+                    <i class="bi bi-quote quote-double"></i>
+                    <div class="text-center flex-grow-1 d-flex flex-column justify-content-between">
+                      <h5 class="card-title">Eu já recomendo a Growth em todos os meus grupos de Bariátricos que participo,
+                        e também a todos meus…</h5>
+                      <div>
+                        <p class="card-text fw-bold">Débora P.</p>
+                        <p class="card-text">13/03/2024</p>
+                        <div class="row stars">
+                          <div class="d-flex justify-content-center">
+                            <i class="bi bi-star-fill"></i>
+                            <i class="bi bi-star-fill"></i>
+                            <i class="bi bi-star-fill"></i>
+                            <i class="bi bi-star-fill"></i>
+                            <i class="bi bi-star-fill"></i>
+                          </div>
+                        </div>
+                      </div>
+                    </div>
+                    <i class="bi bi-quote quote-double invert-icon"></i>
+                  </div>
+                </div>
+              </div>
+              <div class="carousel-item">
+                <div class="card flex-fill">
+                  <div class="card-body d-flex flex-column">
+                    <i class="bi bi-quote quote-double"></i>
+                    <div class="text-center flex-grow-1 d-flex flex-column justify-content-between">
+                      <h5 class="card-title">Ótima loja, com produtos no geral de muito boa qualidade e entrega rápida, segura e barata...</h5>
+                      <div>
+                        <p class="card-text fw-bold">Adriano I.</p>
+                        <p class="card-text">13/03/2024</p>
+                        <div class="row stars">
+                          <div class="d-flex justify-content-center">
+                            <i class="bi bi-star-fill"></i>
+                            <i class="bi bi-star-fill"></i>
+                            <i class="bi bi-star-fill"></i>
+                            <i class="bi bi-star-fill"></i>
+                            <i class="bi bi-star-fill"></i>
+                          </div>
+                        </div>
+                      </div>
+                    </div>
+                    <i class="bi bi-quote quote-double invert-icon"></i>
+                  </div>
+                </div>
+              </div>
+              <div class="carousel-item">
+                <div class="card flex-fill">
+                  <div class="card-body d-flex flex-column">
+                    <i class="bi bi-quote quote-double"></i>
+                    <div class="text-center flex-grow-1 d-flex flex-column justify-content-between">
+                      <h5 class="card-title">Top demais, sou cliente fiel da Growth. Todo mês eu compro pelo menos 2 whey com vocês.…</h5>
+                      <div>
+                        <p class="card-text fw-bold">Rafael S.</p>
+                        <p class="card-text">13/03/2024</p>
+                        <div class="row stars">
+                          <div class="d-flex justify-content-center">
+                            <i class="bi bi-star-fill"></i>
+                            <i class="bi bi-star-fill"></i>
+                            <i class="bi bi-star-fill"></i>
+                            <i class="bi bi-star-fill"></i>
+                            <i class="bi bi-star-fill"></i>
+                          </div>
+                        </div>
+                      </div>
+                    </div>
+                    <i class="bi bi-quote quote-double invert-icon"></i>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <button class="carousel-control-prev" type="button" data-bs-target="#carouselSuplementosAutoplaying" data-bs-slide="prev">
+              <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+              <span class="visually-hidden">Previous</span>
+            </button>
+            <button class="carousel-control-next" type="button" data-bs-target="#carouselSuplementosAutoplaying" data-bs-slide="next">
+              <span class="carousel-control-next-icon" aria-hidden="true"></span>
+              <span class="visually-hidden">Next</span>
+            </button>
+          </div>
+        </div>
+        <!-- Carousel Suplementos -->
+      </div>
     </section>
     <!-- section clientes -->
 
     <!-- section transporte -->
     <section>
-
+      <div></div>
     </section>
     <!-- section transporte -->
 
