--- a/app/pages/cadastro/cadastro.html
+++ b/app/pages/cadastro/cadastro.html
@@ -36,7 +36,7 @@
         <div class="container mt-5">
             <div class="card">
                 <div class="card-header text-center">
-                    <h1>Identificação</h1>
+                    <h1 class="fw-bold">1. Identificação</h1>
                 </div>
                 <h2>Dados pessoais</h2>
                 <div class="card-body">
@@ -47,7 +47,7 @@
                         </div>
                         <div class="mb-3 form-check">
                             <input type="checkbox" class="form-check-input" id="promocoesOfertas">
-                            <label class="form-check-label" for="promocoesOfertas">Quero receber promoções e ofertas da Growth Supplements.</label>
+                            <label class="form-check-label fw-bold" for="promocoesOfertas">Quero receber promoções e ofertas da Growth Supplements.</label>
                         </div>
                         <div class="mb-3">
                             <!-- <label for="cpf" class="form-label">CPF *</label> -->
@@ -73,11 +73,11 @@
                         </div>
                         <div class="mb-3 form-check">
                             <input type="checkbox" class="form-check-input"  id="promocoesWhatsApp">
-                            <label class="form-check-label" for="promocoesWhatsApp">Quero receber promoções via WhatsApp.</label>
+                            <label class="form-check-label fw-bold" for="promocoesWhatsApp">Quero receber promoções via WhatsApp.</label>
                         </div>
                         <div class="mb-3 form-check">
                             <input type="checkbox" class="form-check-input" id="atualizacoesWhatsApp">
-                            <label class="form-check-label" for="atualizacoesWhatsApp">Quero atualizações de pedido via WhatsApp.</label>
+                            <label class="form-check-label fw-bold" for="atualizacoesWhatsApp">Quero atualizações de pedido via WhatsApp.</label>
                         </div>
                         <div class="mb-3">
                             <label class="form-label">Gênero</label><br>
@@ -102,8 +102,9 @@
                             <label for="nivelSeguranca" class="form-label">Nível de segurança</label>
                             <input type="range" class="form-range" id="nivelSeguranca">
                         </div> -->
-                        <button type="submit" class="btn btn-success">Cadastrar</button>
-                    </form>
+                        <div class="d-flex justify-content-center h-100">
+                            <button type="submit" class="w-75 h-75 button-send btn btn-success border-0">Cadastrar</button>
+                        </div>
                 </div>
                 <div class="mt-3 text-center">
                     <p><span class="text-success">Compra 100% segura</span></p>
