--- a/app/pages/cadastro/cadastro.html
+++ b/app/pages/cadastro/cadastro.html
@@ -46,10 +46,9 @@
                     </div>
                     <h2>Dados pessoais</h2>
                     <div class="card-body">
-                        <form>
+                        <form id="myForm">
                             <div class="mb-3">
-                                <!-- <label for="email" class="form-label">E-mail *</label> -->
-                                <input type="email" class="form-control" id="email" placeholder="E-mail *" required>
+                                <input type="email" class="form-control" id="email" pattern="[\w\.-]+@[a-zA-Z\d\.-]+\.[a-zA-Z]{2,}" placeholder="E-mail *" required>
                             </div>
                             <div class="mb-3 form-check">
                                 <input type="checkbox" class="form-check-input" id="promocoesOfertas">
@@ -57,27 +56,20 @@
                                     ofertas da Growth Supplements.</label>
                             </div>
                             <div class="mb-3">
-                                <!-- <label for="cpf" class="form-label">CPF *</label> -->
-                                <input type="text" class="form-control" id="cpf" placeholder="CPF *" required>
+                                <input type="text" class="form-control" id="cpf" pattern="\d{3}\.\d{3}\.\d{3}-\d{2}" placeholder="CPF *" required>
                             </div>
                             <div class="mb-3">
-                                <!-- <label for="nomeCompleto" class="form-label">Nome completo *</label> -->
-                                <input type="text" class="form-control" id="nomeCompleto" placeholder="Nome completo *"
-                                    required>
+                                <input type="text" class="form-control" id="nomeCompleto" pattern=".{3,}" placeholder="Nome completo *" required>
                             </div>
                             <div class="mb-3">
-                                <!-- <label for="dataNascimento" class="form-label">Data de nascimento</label> -->
-                                <input type="date" class="form-control" id="dataNascimento"
-                                    placeholder="Data de nascimento">
+                                <input type="date" class="form-control" id="dataNascimento" placeholder="Data de nascimento">
                             </div>
                             <div class="form-phone row">
                                 <div class="col-12 col-md-6 mb-3">
-                                    <input type="tel" class="form-control" id="telefoneCelular"
-                                        placeholder="Telefone celular *" required>
+                                    <input type="tel" class="form-control" id="telefoneCelular" pattern="\d{10,11}" placeholder="Telefone celular *" required>
                                 </div>
                                 <div class="col-12 col-md-6 mb-3">
-                                    <input type="tel" class="form-control" id="telefoneFixo"
-                                        placeholder="Telefone fixo">
+                                    <input type="tel" class="form-control" id="telefoneFixo" pattern="\d{10,11}" placeholder="Telefone fixo">
                                 </div>
                             </div>
                             <div class="mb-3 form-check">
@@ -93,13 +85,11 @@
                             <div class="mb-3">
                                 <label class="form-label">Gênero</label><br>
                                 <div class="form-check form-check-inline">
-                                    <input class="form-check-input" type="radio" name="genero" id="masculino"
-                                        value="masculino">
+                                    <input class="form-check-input" type="radio" name="genero" id="masculino" value="masculino" required>
                                     <label class="form-check-label" for="masculino">Masculino</label>
                                 </div>
                                 <div class="form-check form-check-inline">
-                                    <input class="form-check-input" type="radio" name="genero" id="feminino"
-                                        value="feminino">
+                                    <input class="form-check-input" type="radio" name="genero" id="feminino" value="feminino">
                                     <label class="form-check-label" for="feminino">Feminino</label>
                                 </div>
                                 <div class="form-check form-check-inline">
@@ -108,17 +98,12 @@
                                 </div>
                             </div>
                             <div class="mb-3">
-                                <!-- <label for="senha" class="form-label">Senha *</label> -->
-                                <input type="password" class="form-control" id="senha" placeholder="Senha *" required>
+                                <input type="password" class="form-control" id="senha" pattern=".{6,}" placeholder="Senha *" required>
                             </div>
-                            <!-- <div class="mb-3">
-                            <label for="nivelSeguranca" class="form-label">Nível de segurança</label>
-                            <input type="range" class="form-range" id="nivelSeguranca">
-                        </div> -->
                             <div class="d-flex justify-content-center h-100">
-                                <button type="submit"
-                                    class="w-75 h-75 button-send btn btn-success border-0">Cadastrar</button>
+                                <button type="button" onclick="submitForm()" class="w-75 h-75 button-send btn btn-success border-0">Cadastrar</button>
                             </div>
+                        </form>
                     </div>
                     <div class="mt-3 text-center">
                         <p class="text-success-custom"><span><i class="bi bi-lock-fill"></i> Compra 100% segura</span>
@@ -129,10 +114,6 @@
                 </div>
             </div>
         </section>
-
-        <section>
-
-        </section>
     </main>
     <!-- main -->
 
@@ -142,6 +123,7 @@
     <div class="footer" id="footer-placeholder"></div>
     <!-- footer -->
     <!-- Script -->
+     <script src="./cadastro.js"></script>
     <script src="/app/util/routers.js"></script>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <!-- <script src="../node_modules/jquery/dist/jquery.min.js"></script> -->
