--- a/app/pages/cadastro/cadastro.html
+++ b/app/pages/cadastro/cadastro.html
@@ -6,38 +6,26 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Growth Suplementos</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
-    <!-- <link rel="stylesheet" href="../node_modules/bootstrap/dist/css/bootstrap.min.css"> -->
     <link href="https://getbootstrap.com/docs/5.3/assets/css/docs.css" rel="stylesheet">
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-icons/1.8.1/font/bootstrap-icons.min.css"
-        rel="stylesheet">
-    <!-- <link rel="stylesheet" href="../node_modules/bootstrap-icons/font/bootstrap-icons.min.css"> -->
-    <!-- <link rel="stylesheet" href="/assets/resources/styles/reset.css"> -->
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-icons/1.8.1/font/bootstrap-icons.min.css" rel="stylesheet">
     <link rel="stylesheet" href="/assets/resources/styles/styles.css">
     <link rel="stylesheet" href="/app/pages/cadastro/cadastro.css">
 </head>
 
 <body>
-    <!-- Favicons -->
-    <div id="favicons-placeholder"></div>
-    <!-- Favicons -->
-    <!-- Cabeçalho -->
-    <header class="">
-        <!-- Navegação -->
+    <header>
         <nav class="navbar navbar-expand-lg navbar-dark">
             <div class="arrow-voltar">
                 <a href="/app/index.html"><i class="bi bi-chevron-left text-black"></i></a>
             </div>
             <div class="container justify-content-center">
-                <a class="navbar-brand d-flex justify-content-center align-items-center" href="/app/index.html">
+                <a class="navbar-brand d-flex justify-content-center img-growth align-items-center" href="/app/index.html">
                     <img src="/assets/resources/images/growth-logo.png" alt="Growth Supplements Logo">
                 </a>
             </div>
         </nav>
-        <!-- Navegação -->
     </header>
-    <!-- Cabeçalho -->
-    <!-- main -->
-    <main class="">
+    <main>
         <section class="form-section d-flex justify-content-center align-content-center">
             <div class="container mt-5">
                 <div class="card">
@@ -52,8 +40,7 @@
                             </div>
                             <div class="mb-3 form-check">
                                 <input type="checkbox" class="form-check-input" id="promocoesOfertas">
-                                <label class="form-check-label fw-bold" for="promocoesOfertas">Quero receber promoções e
-                                    ofertas da Growth Supplements.</label>
+                                <label class="form-check-label fw-bold" for="promocoesOfertas">Quero receber promoções e ofertas da Growth Supplements.</label>
                             </div>
                             <div class="mb-3">
                                 <input type="text" class="form-control" id="cpf" pattern="\d{3}\.\d{3}\.\d{3}-\d{2}" placeholder="CPF *" required>
@@ -62,7 +49,7 @@
                                 <input type="text" class="form-control" id="nomeCompleto" pattern=".{3,}" placeholder="Nome completo *" required>
                             </div>
                             <div class="mb-3">
-                                <input type="date" class="form-control" id="dataNascimento" placeholder="Data de nascimento">
+                                <input type="date" class="form-control" id="dataNascimento" placeholder="Data de nascimento *" required max="2006-06-09">
                             </div>
                             <div class="form-phone row">
                                 <div class="col-12 col-md-6 mb-3">
@@ -74,13 +61,11 @@
                             </div>
                             <div class="mb-3 form-check">
                                 <input type="checkbox" class="form-check-input" id="promocoesWhatsApp">
-                                <label class="form-check-label fw-bold" for="promocoesWhatsApp">Quero receber promoções
-                                    via WhatsApp.</label>
+                                <label class="form-check-label fw-bold" for="promocoesWhatsApp">Quero receber promoções via WhatsApp.</label>
                             </div>
                             <div class="mb-3 form-check">
                                 <input type="checkbox" class="form-check-input" id="atualizacoesWhatsApp">
-                                <label class="form-check-label fw-bold" for="atualizacoesWhatsApp">Quero atualizações de
-                                    pedido via WhatsApp.</label>
+                                <label class="form-check-label fw-bold" for="atualizacoesWhatsApp">Quero atualizações de pedido via WhatsApp.</label>
                             </div>
                             <div class="mb-3">
                                 <label class="form-label">Gênero</label><br>
@@ -101,35 +86,23 @@
                                 <input type="password" class="form-control" id="senha" pattern=".{6,}" placeholder="Senha *" required>
                             </div>
                             <div class="d-flex justify-content-center h-100">
-                                <button type="button" onclick="submitForm()" class="w-75 h-75 button-send btn btn-success border-0">Cadastrar</button>
+                                <button type="submit" class="w-75 h-75 button-send btn btn-success border-0">Cadastrar</button>
                             </div>
                         </form>
                     </div>
                     <div class="mt-3 text-center">
-                        <p class="text-success-custom"><span><i class="bi bi-lock-fill"></i> Compra 100% segura</span>
-                        </p>
-                        <p>Seus dados pessoais estão protegidos, todas as informações são criptografadas para sua
-                            segurança.</p>
+                        <p class="text-success-custom"><span><i class="bi bi-lock-fill"></i> Compra 100% segura</span></p>
+                        <p>Seus dados pessoais estão protegidos, todas as informações são criptografadas para sua segurança.</p>
                     </div>
                 </div>
             </div>
         </section>
     </main>
-    <!-- main -->
-
-
-
-    <!-- footer -->
     <div class="footer" id="footer-placeholder"></div>
-    <!-- footer -->
-    <!-- Script -->
-     <script src="./cadastro.js"></script>
-    <script src="/app/util/routers.js"></script>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-    <!-- <script src="../node_modules/jquery/dist/jquery.min.js"></script> -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
-    <!-- <script src="../node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"></script> -->
-    <!-- Script -->
+    <script src="./cadastro.js"></script>
+    <script src="/app/util/routers.js"></script>
 </body>
 
 </html>
