--- a/app/pages/login/login.html
+++ b/app/pages/login/login.html
@@ -6,12 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Growth Suplementos</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
-    <!-- <link rel="stylesheet" href="../node_modules/bootstrap/dist/css/bootstrap.min.css"> -->
     <link href="https://getbootstrap.com/docs/5.3/assets/css/docs.css" rel="stylesheet">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-icons/1.8.1/font/bootstrap-icons.min.css"
         rel="stylesheet">
-    <!-- <link rel="stylesheet" href="../node_modules/bootstrap-icons/font/bootstrap-icons.min.css"> -->
-    <!-- <link rel="stylesheet" href="/assets/resources/styles/reset.css"> -->
     <link rel="stylesheet" href="/assets/resources/styles/styles.css">
     <link rel="stylesheet" href="./login.css">
 </head>
@@ -42,24 +39,18 @@
             <div class="container mt-5">
                 <div class="card">
                     <div class="card-header text-center"></div>
-                    <h2 class="fw-bold">Informe seu e-mail para continuar</h2>
+                    <h2 class="fw-bold">Informe seu e-mail e senha para entrar</h2>
                     <div class="card-body">
-                        <form>
+                        <form id="loginForm">
                             <div class="mb-3">
-                                <!-- <label for="email" class="form-label">E-mail *</label> -->
                                 <input type="email" class="form-control" id="email" placeholder="E-mail *" required>
                             </div>
                             <div class="mb-3">
-                                <!-- <label for="senha" class="form-label">Senha *</label> -->
                                 <input type="password" class="form-control" id="senha" placeholder="Senha *" required>
                             </div>
-                            <!-- <div class="mb-3">
-                                <label for="nivelSeguranca" class="form-label">Nível de segurança</label>
-                                <input type="range" class="form-range" id="nivelSeguranca">
-                            </div> -->
                             <div class="d-flex justify-content-center h-100">
                                 <button type="submit"
-                                    class="w-75 h-75 button-send btn btn-success border-0">Cadastrar</button>
+                                    class="w-75 h-75 button-send btn btn-success border-0">Entrar</button>
                             </div>
                     </div>
                     <div class="mt-3 text-center">
@@ -80,10 +71,8 @@
     <!-- Script -->
     <script src="/app/util/routers.js"></script>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-    <!-- <script src="../node_modules/jquery/dist/jquery.min.js"></script> -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
-    <!-- <script src="../node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"></script> -->
-    <!-- Script -->
+    <script src="./login.js"></script>
 </body>
 
 </html>
