--- a/app/pages/pagamento/pagamento.html
+++ b/app/pages/pagamento/pagamento.html
@@ -10,6 +10,7 @@
   <link href="https://getbootstrap.com/docs/5.3/assets/css/docs.css" rel="stylesheet">
   <link href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-icons/1.8.1/font/bootstrap-icons.min.css"
     rel="stylesheet">
+    <link rel="stylesheet" href="sweetalert2/dist/sweetalert2.min.css">
   <!-- <link rel="stylesheet" href="../node_modules/bootstrap-icons/font/bootstrap-icons.min.css"> -->
   <link rel="stylesheet" href="/assets/resources/styles/reset.css">
   <link rel="stylesheet" href="/assets/resources/styles/styles.css">
@@ -73,7 +74,8 @@
             </div>
             <ul class="info-section mt-3">
               <li class="mb-1">
-                <p class=""><i class="bi bi-check-circle-fill sucess-color mr-2 m-2 text-center"></i>Possuímos o seu produto em
+                <p class=""><i class="bi bi-check-circle-fill sucess-color mr-2 m-2 text-center"></i>Possuímos o seu
+                  produto em
                   estoque e ele chegará rápido até você.</p>
               </li>
               <li class="mb-1">
@@ -109,22 +111,20 @@
                 <form>
                   <div class="mb-4">
                     <label for="number" class="form-label fw-bold">Número do cartão</label>
-                    <input type="number" class="form-control border-black" id="email" placeholder="4716 8039 02|"
-                      required>
+                    <input type="text" class="form-control border-black" id="email" placeholder="4716 8039 02|" required pattern="\d{4}\s\d{4}\s\d{2}\|">
                   </div>
                   <div class="mb-3">
                     <label for="name" class="form-label fw-bold">Nome do titular</label>
-                    <input type="name" class="form-control border-black" id="senha"
-                      placeholder="Nome como está no cartão" required>
+                    <input type="text" class="form-control border-black" id="senha" placeholder="Nome como está no cartão" required pattern="[A-Za-zÀ-ú]+(?: [A-Za-zÀ-ú]+)*">
                   </div>
                   <div class="row">
                     <div class="mb-3 col-12 col-md-6 mb-3">
-                      <label for="number" class="form-label fw-bold">Validade</label>
-                      <input type="number" class="form-control border-black" id="senha" placeholder="mm/aa" required>
+                      <label for="validade" class="form-label fw-bold">Validade</label>
+                      <input type="text" class="form-control border-black" id="validade" placeholder="mm/aa" required pattern="\d{2}/\d{2}">
                     </div>
                     <div class="mb-3 col-12 col-md-6 mb-3">
-                      <label for="senha" class="form-label fw-bold">CVV</label>
-                      <input type="password" class="form-control border-black" id="senha" placeholder="***" required>
+                      <label for="cvv" class="form-label fw-bold">CVV</label>
+                      <input type="text" class="form-control border-black" id="cvv" placeholder="***" required pattern="\d{3}">
                     </div>
                   </div>
                 </form>
@@ -142,28 +142,20 @@
             </div>
             <div class="card-body flex-grow-1 d-flex flex-column">
               <div class="row">
-                <div class="div-produto col-12 p-3">
-                  <p class="fw-bold">BCAA (10:1:1) (200g) (em pó) - Growth Supplements</p>
-                  <p class="mt-1">Quantidade: 1</p>
-                  <p class="mt-1">R$ 56,00</p>
-                </div>
+                <!-- Produtos serão adicionados aqui pelo script -->
                 <div class="mt-5 col-12 p-3">
-                  <p>Subtotal: <span>R$ 56,00</span></p>
-                </div>
-                <div class="mt-5 col-12 p-3">
-                  <h3 class="fw-bold">Total: <span>R$ 56,00</span></h3>
-                </div>
-                <div class="col-12 d-flex justify-content-center my-3">
-                  <button type="button" class="custom-btn button-send btn btn-success border-0">Comprar</button>
+                  <p>Subtotal: <span class="subtotal-value">R$ 0,00</span></p>
+                      <div class="col-12 d-flex justify-content-center my-3">
+                        <button type="button" id="mensagem" class="custom-btn button-send btn btn-success border-0">Comprar</button>
+                      </div>
                 </div>
               </div>
             </div>
-          </div>
-          <div class="voltar-carrinho col-12 mt-4">
-            <a class="fw-bold" href="/app/index.html">Voltar ao carrinho</a>
+            <div class="voltar-carrinho col-12 mt-4">
+              <a class="fw-bold" href="/app/index.html">Voltar ao carrinho</a>
+            </div>
           </div>
         </div>
-      </div>
     </section>
   </main>
 
@@ -175,9 +167,11 @@
   <script src="/app/util/routers.js"></script>
   <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
   <!-- <script src="../node_modules/jquery/dist/jquery.min.js"></script> -->
+  <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
   <!-- <script src="../node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"></script> -->
-   <script src="./pagamento.js"></script>
+  <script src="sweetalert2/dist/sweetalert2.min.js"></script>
+  <script src="./pagamento.js"></script>
   <!-- Script -->
 </body>
 
